@@ -7,7 +7,8 @@
         Width="525">
 
     <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center">
-        <Button Content="ColorDetectorTests" AutomationProperties.AutomationId="CUI_ColorDetectorTests_Button" Click="ButtonBase_OnClick" />
+        <Button Content="ColorDetectorTests" AutomationProperties.AutomationId="CUI_ColorDetectorTests_Button" Click="ColorDetectorTests_Button_OnClick" />
+        <Button Content="KeyboardExTests" AutomationProperties.AutomationId="CUI_KeyboardExTests_Button" Click="KeyboardExTests_Button_OnClick" />
     </StackPanel>
     
 </Window>
