@@ -9,9 +9,16 @@ namespace TestApplication
             InitializeComponent();
         }
 
-        private void ButtonBase_OnClick(object sender, RoutedEventArgs e)
+        private void ColorDetectorTests_Button_OnClick(object sender, RoutedEventArgs e)
         {
             var window = new ColorDetectorTestsWindow();
+            window.Owner = this;
+            window.ShowDialog();
+        }
+
+        private void KeyboardExTests_Button_OnClick(object sender, RoutedEventArgs e)
+        {
+            var window = new KeyboardExTestsWindow();
             window.Owner = this;
             window.ShowDialog();
         }
